# Rubiks_Cube_Solver

./: CMakeLists.txt  GenericRubiksCube.h  NibbleArray.h  README.md  main.cpp
Model/: GenericRubiksCube.cpp  GenericRubiksCube.h  RubiksCube1DArray.cpp  RubiksCube3DArray.cpp  RubiksCubeBitboard.cpp
PatternDatabases/: CornerDBMaker.cpp  CornerDBMaker.h  CornerPatternDatabase.cpp  CornerPatternDatabase.h  NibbleArray.cpp  NibbleArray.h  PatternDatabase.cpp  PatternDatabase.h  PermutationIndexer.h  math.cpp  math.h
Scanner/: CubeScanner.cpp  CubeScanner.h
Solver/: BFSSolver.h  DFSSolver.h  IDAstarSolver.h  IDDFSSolver.h
bits/: stdc++.h
